--- a/Home.html
+++ b/Home.html
@@ -1,1 +1,54 @@
 <!DOCTYPE HTML>
+<html>
+    <head>
+        <title>House Points App Home</title>
+    </head>
+    <body>
+        <div class = "NavBar">
+            <img src = "houseCrest.webp" class = "logo" alt ="House Crest Image">
+            <a href = "#">House Points</a>
+            <a href = "#">Leaderboard</a>
+            <a href = "#">Profile</a>
+            <img src = "picture.jpg" class = "photo" alt = "Profile Picture">
+        </div>
+    </body>
+</html>
+
+<style>
+    .NavBar{
+    background-color: rgb(240, 184, 0);
+    overflow: hidden;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 10px 20px;
+    }
+
+    .NavBar a {
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    flex: 1 1 auto;
+  }
+
+  .NavBar a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .logo {
+    height: 40px;
+    margin-right: 20px;
+  }
+
+  .photo {
+    height: 40px;
+    margin-left: 20px;
+  }
+
+</style>
