moved styles for navbar

--- a/Home.html
+++ b/Home.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>House Points App Home</title>
+        <link rel="stylesheet" href="navbars.css">
     </head>
     <body>
         <div class = "NavBar">
@@ -13,42 +14,3 @@
         </div>
     </body>
 </html>
-
-<style>
-    .NavBar{
-    background-color: rgb(240, 184, 0);
-    overflow: hidden;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    padding: 10px 20px;
-    }
-
-    .NavBar a {
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    flex: 1 1 auto;
-  }
-
-  .NavBar a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  .logo {
-    height: 40px;
-    margin-right: 20px;
-  }
-
-  .photo {
-    height: 40px;
-    margin-left: 20px;
-  }
-
-</style>
