--- a/Home.html
+++ b/Home.html
@@ -8,8 +8,52 @@
             <img src = "houseCrest.webp" class = "logo" alt ="House Crest Image">
             <a href = "#">House Points</a>
             <a href = "#">Leaderboard</a>
+            <a href = "#">Student Store</a>
             <a href = "#">Profile</a>
             <img src = "picture.jpg" class = "photo" alt = "Profile Picture">
+        </div>
+
+        <div class = leaderboard>
+            <div class = "first">
+                <img src = "houseCrest.webp" alt ="House Crest Image">
+                <h1>1st</h1>
+                <p>980,000 Pts.</p>
+            </div>
+            <div class = "second">
+                <img src = "houseCrest.webp" alt ="House Crest Image">
+                <h1>2nd</h1>
+                <p>700,000 Pts.</p>
+            </div>
+            <div class = "third">
+                <img src = "houseCrest.webp" alt ="House Crest Image">
+                <h1>3rd</h1>
+                <p>590,000 Pts.</p>
+            </div>
+            <div class = "fourth">
+                <img src = "houseCrest.webp" alt ="House Crest Image">
+                <h1>4th</h1>
+                <p>530,000 Pts.</p>
+            </div>
+            <div class = "fifth">
+                <img src = "houseCrest.webp" alt ="House Crest Image">
+                <h1>5th</h1>
+                <p>499,000 Pts.</p>
+            </div>
+            <div class = "sixth">
+                <img src = "houseCrest.webp" alt ="House Crest Image">
+                <h1>6th</h1>
+                <p>420,000 Pts.</p>
+            </div>
+            <div class = "seventh">
+                <img src = "houseCrest.webp" alt ="House Crest Image">
+                <h1>7th</h1>
+                <p>380,000 Pts.</p>
+            </div>
+            <div class = "eighth">
+                <img src = "houseCrest.webp" alt ="House Crest Image">
+                <h1>8th</h1>
+                <p>380,000 Pts.</p>
+            </div>
         </div>
     </body>
 </html>
@@ -49,6 +93,80 @@
   .photo {
     height: 40px;
     margin-left: 20px;
+  }
+
+  .leaderboard{
+    display: flex;
+    justify-content: center;
+    justify-content: space-evenly;
+    text-align: center;
+    align-items: flex-end;
+    margin-top: 50px;
+    margin-bottom: 0px;
+  }
+  .leaderboard img{
+    align-items: center;
+    height: 40px;
+  }
+
+  .first {
+    background-color: gold;
+    width: 250px;
+    height: 500px;
+  }
+
+  .first img{
+    height: 70px;
+  }
+  
+  .second {
+    background-color: silver;
+    width: 200px;
+    height: 450px;
+  }
+
+  .second img{
+    height: 60px;
+  }
+
+  .third {
+    background-color: rgb(206, 112, 5);
+    width: 150px;
+    height: 400px;
+  }
+
+  .third img{
+    height: 50px;
+  }
+
+  .fourth {
+    background-color: rgb(93, 223, 255);
+    width: 100px;
+    height: 350px;
+  }
+
+  .fifth {
+    background-color: rgb(126, 103, 255);
+    width: 100px;
+    height: 300px;
+  }
+
+  .sixth {
+    background-color: rgb(233, 82, 247);
+    width: 100px;
+    height: 250px;
+  }
+
+  .seventh {
+    background-color: rgb(255, 74, 74);
+    width: 100px;
+    height: 200px;
+  }
+  
+  .eighth {
+    background-color: rgb(125, 255, 120);
+    width: 100px;
+    height: 150px;
   }
 
 </style>
