did a little for title

--- a/store.html
+++ b/store.html
@@ -12,6 +12,13 @@
             <a href = "#">Profile</a>
             <img src = "picture.jpg" class = "photo" alt = "Profile Picture">
         </div>
+
+        <div style="display: flex; justify-content: space-between;">
+            <h1>Student Store</h1>
+            <h3>Your points: 0 pts.</h3>
+        </div>
+
+        //
     </body>
     <footer>
         <div class="navbar">
