--- a/Home.html
+++ b/Home.html
@@ -7,14 +7,14 @@
     <body>
         <div class = "NavBar">
             <img src = "houseCrest.webp" class = "logo" alt ="House Crest Image">
-            <a href = "#">House Points</a>
+            <a href = "Home.html">House Points</a>
             <a href = "#">Leaderboard</a>
-            <a href = "#">Student Store</a>
+            <a href = "store.html">Student Store</a>
             <a href = "#">Profile</a>
             <img src = "picture.jpg" class = "photo" alt = "Profile Picture">
         </div>
 
-        <div class = leaderboard>
+        <div class = class-leaderboard>
             <div class = "first">
                 <img src = "houseCrest.webp" alt ="House Crest Image">
                 <h1>1st</h1>
@@ -58,80 +58,3 @@
         </div>
     </body>
 </html>
-
-<style>
-  .leaderboard{
-    display: flex;
-    justify-content: center;
-    justify-content: space-evenly;
-    text-align: center;
-    align-items: flex-end;
-    margin-top: 50px;
-    margin-bottom: 0px;
-  }
-  .leaderboard img{
-    align-items: center;
-    height: 40px;
-  }
-
-  .first {
-    background-color: gold;
-    width: 250px;
-    height: 500px;
-  }
-
-  .first img{
-    height: 70px;
-  }
-  
-  .second {
-    background-color: silver;
-    width: 200px;
-    height: 450px;
-  }
-
-  .second img{
-    height: 60px;
-  }
-
-  .third {
-    background-color: rgb(206, 112, 5);
-    width: 150px;
-    height: 400px;
-  }
-
-  .third img{
-    height: 50px;
-  }
-
-  .fourth {
-    background-color: rgb(93, 223, 255);
-    width: 100px;
-    height: 350px;
-  }
-
-  .fifth {
-    background-color: rgb(126, 103, 255);
-    width: 100px;
-    height: 300px;
-  }
-
-  .sixth {
-    background-color: rgb(233, 82, 247);
-    width: 100px;
-    height: 250px;
-  }
-
-  .seventh {
-    background-color: rgb(255, 74, 74);
-    width: 100px;
-    height: 200px;
-  }
-  
-  .eighth {
-    background-color: rgb(125, 255, 120);
-    width: 100px;
-    height: 150px;
-  }
-
-</style>
