Another merger, leaderboard and home fixed somewhat

--- a/store.html
+++ b/store.html
@@ -3,6 +3,7 @@
     <head>
         <title>Student Store</title>
         <link rel="stylesheet" href="navbars.css">
+        <link rel = "stylesheet" href = "main.css">
     </head>
     <body>
         <div class = "NavBar">
