--- a/Home.html
+++ b/Home.html
@@ -3,6 +3,7 @@
     <head>
         <title>House Points App Home</title>
         <link rel="stylesheet" href="navbars.css">
+        <link rel = "stylesheet" href = "main.css">
     </head>
     <body>
         <div class = "NavBar">
