finished text for items

--- a/store.html
+++ b/store.html
@@ -19,7 +19,13 @@
             <h3>Your points: 0 pts.</h3>
         </div>
 
-        //
+        <div style="border-bottom: 5px solid;">
+            <h1>Apple</h1>
+            <div style="display: flex; justify-content: space-between;">
+                <p>Description</p>
+                <h3 style="text-align: right;">25 pts</h3>
+            </div>
+        </div>
     </body>
     <footer>
         <div class="navbar">
