--- a/leaderboard.html
+++ b/leaderboard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>House Points App Home</title>
+        <title>Leaderboard</title>
         <link rel="stylesheet" href="navbars.css">
         <link rel = "stylesheet" href = "main.css">
     </head>
