finished items and navbars

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -8,9 +8,10 @@
     <body>
         <div class = "NavBar">
             <img src = "houseCrest.webp" class = "logo" alt ="House Crest Image">
-            <a href = "#">House Points</a>
-            <a href = "#">Leaderboard</a>
-            <a href = "#">Profile</a>
+            <a href = "Home.html">House Points</a>
+            <a href = "leaderboard.html" class="active">Leaderboard</a>
+            <a href = "store.html">Student Store</a>
+            <a href = "profile.html">Profile</a>
             <img src = "picture.jpg" class = "photo" alt = "Profile Picture">
         </div>
 
