--- a/Home.html
+++ b/Home.html
@@ -8,10 +8,10 @@
     <body>
         <div class = "NavBar">
             <img src = "houseCrest.webp" class = "logo" alt ="House Crest Image">
-            <a href = "Home.html">House Points</a>
-            <a href = "#">Leaderboard</a>
+            <a href = "Home.html" class="active">House Points</a>
+            <a href = "leaderboard.html">Leaderboard</a>
             <a href = "store.html">Student Store</a>
-            <a href = "#">Profile</a>
+            <a href = "profile.html">Profile</a>
             <img src = "picture.jpg" class = "photo" alt = "Profile Picture">
         </div>
 
