--- a/profile.html
+++ b/profile.html
@@ -9,9 +9,9 @@
         <div class = "NavBar">
             <img src = "houseCrest.webp" class = "logo" alt ="House Crest Image">
             <a href = "Home.html">House Points</a>
-            <a href = "#">Leaderboard</a>
+            <a href = "leaderboard.html">Leaderboard</a>
             <a href = "store.html">Student Store</a>
-            <a href = "#">Profile</a>
+            <a href = "profile.html" class="active">Profile</a>
             <img src = "picture.jpg" class = "photo" alt = "Profile Picture">
         </div>
         
