fixed my pages and teacher page

--- a/store.html
+++ b/store.html
@@ -24,7 +24,7 @@
             <img src="apple.jpg" alt="Apple" class="itemImg">
             <h1>Apple</h1>
             <div class="sameLine">
-                <p class="textScroll">According to all known laws of aviation, there is no way a bee should be able to fly. 
+                <p class="textScroll storeDesc">According to all known laws of aviation, there is no way a bee should be able to fly. 
                     Its wings are too small to get its fat little body off the ground.
                     The bee, of course, flies anyway because bees don't care what humans think is impossible.
                     Yellow, black. Yellow, black. Yellow, black. Yellow, black.
@@ -38,31 +38,9 @@
             <img src="apple.jpg" alt="Apple" class="itemImg">
             <h1>Apple</h1>
             <div class="sameLine">
-                <p>Description</p>
+                <p class="textScroll storeDesc">Description</p>
                 <h3>25 pts</h3>
             </div>
         </div>
     </body>
-
-    <style>
-        .item {
-            border: 5px solid;
-            display: inline-block;
-            padding: 20px;
-            height: 500px;
-        }
-        .sameLine {
-            display: flex; 
-            justify-content: space-between;
-        }
-        .itemImg {
-            max-width: 90%;
-            max-height: 90%;
-        }
-        .textScroll {
-            height: 70px;
-            width: 300px;
-            overflow-y: scroll;
-        }
-    </style>
 </html>
