--- a/teachHouses.html
+++ b/teachHouses.html
@@ -10,10 +10,42 @@
             <img src = "houseCrest.webp" class = "logo" alt ="House Crest Image">
             <a href = "Home.html">House Points</a>
             <a href = "leaderboard.html">Leaderboard</a>
-            <a href = "teachHouses.html" class="active">Your Houses</a>\
+            <a href = "teachHouses.html" class="active">Your Houses</a>
             <a href = "#">Award Points</a>
             <a href = "profile.html">Profile</a>
             <img src = "picture.jpg" class = "photo" alt = "Profile Picture">
+        </div>
+
+        <div class="house">
+            <img src="houseCrest.webp" alt="House Crest" class="houseImg">
+            <div class="sameLine  houseTitle">
+                <h1>Barbarians</h1>
+                <h3>700,000 Pts.</h3>
+            </div>
+            <div class="textScroll teachDesc">
+                According to all known laws of aviation, there is no way a bee should be able to fly. 
+                Its wings are too small to get its fat little body off the ground.
+                The bee, of course, flies anyway because bees don't care what humans think is impossible.
+                Yellow, black. Yellow, black. Yellow, black. Yellow, black.
+                Ooh, black and yellow!
+                Let's shake it up a little.
+            </div>
+        </div>
+
+        <div class="house">
+            <img src="houseCrest.webp" alt="House Crest" class="houseImg">
+            <div class="sameLine houseTitle">
+                <h1>Barbarians</h1>
+                <h3>700,000 Pts.</h3>
+            </div>
+            <div class="textScroll teachDesc">
+                According to all known laws of aviation, there is no way a bee should be able to fly. 
+                Its wings are too small to get its fat little body off the ground.
+                The bee, of course, flies anyway because bees don't care what humans think is impossible.
+                Yellow, black. Yellow, black. Yellow, black. Yellow, black.
+                Ooh, black and yellow!
+                Let's shake it up a little.
+            </div>
         </div>
     </body>
 </html>
