--- a/teachHouses.html
+++ b/teachHouses.html
@@ -11,7 +11,7 @@
             <a href = "Home.html">House Points</a>
             <a href = "leaderboard.html">Leaderboard</a>
             <a href = "teachHouses.html" class="active">Your Houses</a>
-            <a href = "#">Award Points</a>
+            <a href = "AwardPoints.html">Award Points</a>
             <a href = "profile.html">Profile</a>
             <img src = "picture.jpg" class = "photo" alt = "Profile Picture">
         </div>
